[package]
name = "Cube3D"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "*", features = ["dynamic_linking"]}
bevy = "0.16"
avian3d = "0.3"
#avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

